# Autolumnet

./: LICENSE  README.md  pyproject.toml  requirements.txt
autolumnet/: __init__.py  evaluate.py  train.py  tune.py
autolumnet/data/: __init__.py  sice_dataset.py  sice_download.py
autolumnet/losses/: __init__.py  objective.py  perceptual.py  sorted_w2.py
autolumnet/models/: __init__.py  fusion.py  network.py  tone.py
autolumnet/training/: trainer.py
autolumnet/utils/: __init__.py  checkpoint.py  config.py  distributed.py  ema.py  logger.py  metrics.py
configs/: sice_smoke.yaml  sice_sota.yaml  tune_space.yaml
docs/: RUNPOD.md  THEORY.md
scripts/: runpod_provision.sh  train.sh
tests/: test_config.py  test_theory_invariants.py
